fix: breaking of buttons on mobile

--- a/src/app/user-area/pages/new-notice/new-notice.component.scss
+++ b/src/app/user-area/pages/new-notice/new-notice.component.scss
@@ -38,3 +38,11 @@ h2 {
     margin-left: 0;
     margin-right: 8px;
 }
+
+.buttons {
+    margin-bottom: 40px;
+
+    button {
+        margin-bottom: 1rem;
+    }
+}
